[package]
name = "bevy_wry_webview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
toml_datetime = { version = "0.6.5" }

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", version = "0.12.0" }
wry = { version = "0.36", default-features = false, features = ["file-drop", "objc-exception", "protocol", "transparent", "os-webview"] }
crossbeam = "0.7.3"
serde = { version = "1.0.193", features = ["derive"]  }
rmp = "^0.8"
rmp-serde = "1.1.2"
raw-window-handle = "0.6"

# [target."cfg(not(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\")))".dependencies]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
winit = { version = "0.29", features = [ "rwh_06" ] }
gtk = { version = "0.18" }
x11-dl = { version = "2.9" }
serde_json = { version = "1.0.108", features = [ "std" ] }

[dev-dependencies]
bevy_simple_text_input = "0.3.1"
